--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/expo": "^32.0.10",
     "@types/react": "^16.8.13",
     "@types/react-native": "^0.57.43",
+    "@types/react-navigation": "^3.0.6",
     "tslint": "^5.15.0",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.4.3"
