--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "tslint": "tslint --project ."
   },
   "dependencies": {
+    "actioncable": "^5.2.3",
     "expo": "^32.0.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
@@ -17,6 +18,7 @@
     "react-navigation": "^3.8.1"
   },
   "devDependencies": {
+    "@types/actioncable": "^5.2.0",
     "@types/expo": "^32.0.10",
     "@types/react": "^16.8.13",
     "@types/react-native": "^0.57.43",
